--- a/curso-03/mao-na-massa/mao-na-massa-02/styles.css
+++ b/curso-03/mao-na-massa/mao-na-massa-02/styles.css
@@ -97,6 +97,10 @@ h1 span {
   line-height: 2.25rem;
 }
 
+.container p span {
+  color: var(--light-blue);
+}
+
 .buttons {
   width: 100%;
 
@@ -122,6 +126,7 @@ h1 span {
 }
 
 .button:hover {
+  font-weight: 600;
   color: var(--black);
   filter: brightness(0.9);
 }
@@ -129,6 +134,8 @@ h1 span {
 img {
   width: 100%;
   max-width: 500px;
+
+  border-radius: 1rem;
 }
 
 footer {
