--- a/curso-03/mao-na-massa/mao-na-massa-02/styles.css
+++ b/curso-03/mao-na-massa/mao-na-massa-02/styles.css
@@ -12,13 +12,17 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow: hidden;
+ }
+
 html {
   font-size: 93.5%;
 }
 
 body {
   max-width: 70rem;
-  min-height: 100vh;
+  height: 100vh;
 
   margin: 0 auto;
 
