--- a/curso-03/mao-na-massa/mao-na-massa-02/styles.css
+++ b/curso-03/mao-na-massa/mao-na-massa-02/styles.css
@@ -12,10 +12,6 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 93.5%;
-}
-
 body {
   max-width: 70rem;
   height: 100vh;
@@ -28,7 +24,7 @@ body {
   justify-content: space-between;
   gap: 4rem;
 
-  font-family: "Montserrat", sans-serif;
+  font: 400 1.5rem "Montserrat", sans-serif;
   background-color: var(--black);
   color: var(--white);
 }
@@ -61,7 +57,7 @@ header :first-child {
 }
 
 nav {
-  gap: 1rem;
+  gap: 5rem;
   font-size: 1.25rem;
 }
 
@@ -87,7 +83,6 @@ a.active:hover {
   width: 100%;
 
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
 
@@ -100,11 +95,27 @@ a.active:hover {
   gap: 5rem;
 }
 .content-text {
-  max-width: 593px;
-  
+  max-width: 40rem;
+
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
+}
+
+.content-about {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  gap: 2.5rem;
+}
+
+.content-about-context {
+  width: 100%;
+  display: flex;
+
+  gap: 5rem;
 }
 
 .title {
@@ -112,7 +123,7 @@ a.active:hover {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.25rem;
   line-height: 3.5rem;
 }
 
@@ -121,7 +132,7 @@ h1 span {
 }
 
 .content p {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   line-height: 2.25rem;
 }
 
@@ -170,7 +181,7 @@ img {
   border-radius: 1rem;
 }
 
-.about {
+.about p {
   font: 300 1.5rem "Montserrat";
   line-height: 2.25rem;
 }
@@ -178,4 +189,56 @@ img {
 footer {
   width: 100%;
   padding: 2rem;
+  font: 300 1.25rem "Montserrat";
+}
+
+footer a {
+  color: var(--primary-color);
+}
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  body {
+    padding: 2rem;
+  }
+
+  .none {
+    display: none;
+  }
+
+  .container {
+    width: 100%;
+    gap: 1.5rem;
+    align-items: center;
+  }
+
+  .content {
+    width: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  nav {
+    width: 100%;
+    justify-content: space-evenly;
+  }
+
+  .content-text .title {
+    font-size: 1.5rem;
+    line-height: 3.5rem;
+  }
+
+  .content-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  footer p {
+    font: 300 1.125rem "Montserrat";
+    text-align: center;
+  }
 }
